syntax = "proto3";
option go_package = "./ProtoMessage;ProtoMessage";
option csharp_namespace = "ProtoMessage"; 
package ProtoMessage;

////////////////////////////////////////////////////////////////
//
//  Enum
//
////////////////////////////////////////////////////////////////
enum RESULT {
    SUCCESS = 0;
    FAILED = 1;
}

// 职业
enum CharacterClass {
    None = 0;
    Warrior = 1; // 战士
    Hunter = 2; // 猎人
    Sorcerer = 3; // 法师
}

enum CharacterType {
    Player = 0;//玩家
    Other = 1;// 其他玩家
    Monster = 2;//怪物
}